update notes on virtual threads